# rick

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
rick_cli/: cli.py  llm.py  logger.py  models.py  parser.py  preflight.py  rick.py  security.py  tui.py
seedflow_cli/: cli.py  context_aliases.py  engine.py  env.py  llm.py  logger.py  prompts.py  runner.py  tui.py  workspaces.py
tests/: test_cli.py  test_engine.py  test_llm.py  test_parser.py  test_preflight_and_context.py  test_prompts.py  test_tui.py  test_workspaces.py
